--- a/pom.xml
+++ b/pom.xml
@@ -8,9 +8,9 @@
 	<groupId>org.vle.aid.taverna</groupId>
 	<artifactId>aid-plugin</artifactId>
 
-	<version>0.3.2</version>
+	<version>0.3.3</version>
 
-	<name>AID Taverna Plug In for Taverna 2.3.0 </name>
+	<name>AID Taverna Plug In for Taverna 2.4.1 </name>
 
 	<description>
 		A taverna perspective to access some function of AIDA Toolkit
@@ -55,18 +55,23 @@
 			<url>http://www.mygrid.org.uk/maven/repository</url>
 			<releases>  <enabled> true </enabled>  </releases>
 		</repository>  
+		<repository>  
+			<id>kenai</id>  
+			<name>kenai</name>
+			<url>http://nbpwr.kenai.com/maven-repository/releases/</url>
+			<releases>  <enabled> true </enabled>  </releases>
+		</repository>  
 	</repositories>
 
 	<properties>
-		<t2.workbench.version>1.3</t2.workbench.version>
-		<t2.workbench.perspective.version>2.2</t2.workbench.perspective.version>
-		<t2.ui.version>1.3</t2.ui.version>
+		<t2.workbench.version>1.4</t2.workbench.version>
+		<t2.workbench.perspective.version>2.4</t2.workbench.perspective.version>
+		<t2.ui.version>1.4</t2.ui.version>
 
-		<t2.core.version>1.3</t2.core.version>
-		<t2.infrastructure.version>1.9</t2.infrastructure.version>
-		<t2.activities.version>1.3</t2.activities.version>
+		<t2.core.version>1.4</t2.core.version>
+		<t2.infrastructure.version>2.4</t2.infrastructure.version>
+		<t2.activities.version>1.4</t2.activities.version>
 
-		<taverna.version>1.7.2.2</taverna.version>
 	</properties>	
 
 	<dependencies>
@@ -122,7 +127,7 @@
                         <version>${t2.ui.version}</version>
                 </dependency>
                 <dependency>
-                        <groupId>uk.org.mygrid.taverna.raven</groupId>
+                        <groupId>net.sf.taverna.t2.infrastructure</groupId>
                         <artifactId>appconfig</artifactId>
                         <version>${t2.infrastructure.version}</version>
                 </dependency>
@@ -154,7 +159,7 @@
 					<version>20040218.194635</version>
 				</dependency> 
 				<dependency>
-					<groupId>lobo</groupId>
+					<groupId>org.lobobrowser</groupId>
 					<artifactId>cobra</artifactId>
 					<version>0.98.4</version>
 				</dependency>
