--- a/pom.xml
+++ b/pom.xml
@@ -54,13 +54,7 @@
 			<name>myGrid Repository</name>
 			<url>http://www.mygrid.org.uk/maven/repository</url>
 			<releases>  <enabled> true </enabled>  </releases>
-		</repository>  
-		<repository>  
-			<id>kenai</id>  
-			<name>kenai</name>
-			<url>http://nbpwr.kenai.com/maven-repository/releases/</url>
-			<releases>  <enabled> true </enabled>  </releases>
-		</repository>  
+		</repository>
 	</repositories>
 
 	<properties>
@@ -152,21 +146,11 @@
 						<groupId>commons-logging</groupId>
 						<artifactId>commons-logging</artifactId>
 						<version>1.1</version>
-				</dependency>  
-				<dependency>
-					<groupId>commons-discovery</groupId>
-					<artifactId>commons-discovery</artifactId>
-					<version>20040218.194635</version>
-				</dependency> 
-				<dependency>
-					<groupId>org.lobobrowser</groupId>
-					<artifactId>cobra</artifactId>
-					<version>0.98.4</version>
 				</dependency>
-				 <dependency>
+				<dependency>
 					   <groupId>org.swinglabs</groupId>
 					   <artifactId>swingx</artifactId>
-					   <version>0.9.2</version>
+					   <version>1.6.1</version>
 				</dependency>
 				 <dependency>
 					   <groupId>org.swinglabs</groupId>
@@ -180,7 +164,7 @@
 		<repository>
 			<id>local-repository</id>
 			<name>AIDA Taverna Plugin Repository</name>
-			<url>file:///home/aida/tomcat-dev/webapps/repository</url>
+			<url>file:///library/tomcat/apache-tomcat-6.0.29/webapps/ROOT/aida/repository/</url>
 		</repository>
 	</distributionManagement>
 </project>
